--- a/scrollCubeExample/example.html
+++ b/scrollCubeExample/example.html
@@ -34,6 +34,6 @@
     <section class="section-five">
 
     </section>
-    <script type='module' src="./applied.js"></script>
+    <script type='module' src="./orbitExample.js"></script>
 </body>
 </html>
